--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FinalAppAndroid</string>
+    <string name="name">Name</string>
+    <string name="hintName">Your Name</string>
+    <string name="hintCar">Your Car</string>
+
 </resources>
