--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="hintName">Your Name</string>
     <string name="hintCar">Your Car</string>
     <string name="hintNumber">Your Car Number</string>
-
+    <string name="errorDriverName">Name is invalid</string>
 </resources>
