finish with settings, need to work on web view to show last parking place

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="hintCar">Your Car</string>
     <string name="hintNumber">Your Car Number</string>
     <string name="errorDriverName">Name is invalid</string>
+    <string name="errorDriverCar">Car name is invalid</string>
+    <string name="errorDriverCarNumber">Number is invalid</string>
 </resources>
