working on save location-app crashed because the appp dont location  permission

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="errorDriverName">Name is invalid</string>
     <string name="errorDriverCar">Car name is invalid</string>
     <string name="errorDriverCarNumber">Number is invalid</string>
+    <string name="save">Save Location</string>
+    <string name="updateLocation">Update Location</string>
 </resources>
