save location finished, working on parking history

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="errorDriverCarNumber">Number is invalid</string>
     <string name="save">Save Location</string>
     <string name="updateLocation">Update Location</string>
+    <string name="deleteLocationList">Delete All Locations</string>
 </resources>
